# my_printf_auxilliaires_42

Road_to_Unicode/: CMakeLists.txt
Road_to_Unicode/Includes/: Convert_base.h  Functions.h  test_functions.h
Road_to_Unicode/Includes/numbers_functions/: numbers_functions_octal.h
Road_to_Unicode/Sources/: Cahier des charges  Convert_base.c  Functions.c  main.c  test_functions_with_va_arg.c
Road_to_Unicode/Sources/numbers_functions/: numbers_functions_octal.c
